Fixed issue with file locations

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
         </button>
         <div class="player-score hit-box" id="score-hits">
           <p>
-            0x <img src="dice-1.png" class="dice" /> 0x
-            <img src="dice-2.png" class="dice" /> 0x
-            <img src="dice-3.png" class="dice" />
+            0x <img src="img/dice-1.png" class="dice" /> 0x
+            <img src="img/dice-2.png" class="dice" /> 0x
+            <img src="img/dice-3.png" class="dice" />
           </p>
           <p>
-            0x <img src="dice-4.png" class="dice" /> 0x
-            <img src="dice-5.png" class="dice" /> 0x
-            <img src="dice-6.png" class="dice" />
+            0x <img src="img/dice-4.png" class="dice" /> 0x
+            <img src="img/dice-5.png" class="dice" /> 0x
+            <img src="img/dice-6.png" class="dice" />
           </p>
         </div>
         <div class="player-current-box">
@@ -125,14 +125,14 @@
         </button>
         <div class="player-score wound-box" id="score-wounds">
           <p>
-            0x <img src="dice-1.png" class="dice" /> 0x
-            <img src="dice-2.png" class="dice" /> 0x
-            <img src="dice-3.png" class="dice" />
+            0x <img src="img/dice-1.png" class="dice" /> 0x
+            <img src="img/dice-2.png" class="dice" /> 0x
+            <img src="img/dice-3.png" class="dice" />
           </p>
           <p>
-            0x <img src="dice-4.png" class="dice" /> 0x
-            <img src="dice-5.png" class="dice" /> 0x
-            <img src="dice-6.png" class="dice" />
+            0x <img src="img/dice-4.png" class="dice" /> 0x
+            <img src="img/dice-5.png" class="dice" /> 0x
+            <img src="img/dice-6.png" class="dice" />
           </p>
         </div>
         <div class="player-current-box">
@@ -156,14 +156,14 @@
         </button>
         <div class="player-score save-box" id="score-save">
           <p>
-            0x <img src="dice-1.png" class="dice" /> 0x
-            <img src="dice-2.png" class="dice" /> 0x
-            <img src="dice-3.png" class="dice" />
+            0x <img src="img/dice-1.png" class="dice" /> 0x
+            <img src="img/dice-2.png" class="dice" /> 0x
+            <img src="img/dice-3.png" class="dice" />
           </p>
           <p>
-            0x <img src="dice-4.png" class="dice" /> 0x
-            <img src="dice-5.png" class="dice" /> 0x
-            <img src="dice-6.png" class="dice" />
+            0x <img src="img/dice-4.png" class="dice" /> 0x
+            <img src="img/dice-5.png" class="dice" /> 0x
+            <img src="img/dice-6.png" class="dice" />
           </p>
         </div>
         <div class="player-current-box">
