--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     />
 
     <link type="text/css" rel="stylesheet" href="style.css" />
+<!--    <script-->
+<!--            type="module"-->
+<!--            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"-->
+<!--    ></script>-->
+    <script
+            type="module"
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
 
     <title>Warhammer Dice Roller</title>
   </head>
@@ -181,14 +189,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
