--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
       type="text/css"
     />
     <link
-      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
       type="text/css"
     />
 
     <link type="text/css" rel="stylesheet" href="style.css" />
-<!--    <script-->
-<!--            type="module"-->
-<!--            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"-->
-<!--    ></script>-->
     <script
             type="module"
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
@@ -189,6 +185,6 @@
       </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="src/init.js"></script>
   </body>
 </html>
